--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -16,7 +16,7 @@
   <div class="collapse navbar-collapse" id="navbarSupportedContent">
     <ul class="navbar-nav mr-auto">
       <li class="nav-item active">
-        <a class="nav-link" th:href="@{/register}">Register <span class="sr-only">(current)</span></a>
+        <a class="nav-link" th:href="@{/register}">Register <span class="sr-only"></span></a>
       </li>
     </ul>
   </div>
