--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -28,6 +28,11 @@
             <div class="card-header">
                 <h2 class="text-center">Registration</h2>
             </div>
+            <div th:if="${param.success}">
+                <div class="alert alert-info">
+                    You have successfully registered our app!
+                </div>
+            </div>
             <div class="card-body">
                 <form
                     method="post"
@@ -76,7 +81,7 @@
                                 name="password"
                                 placeholder="Enter password"
                                 th:field="*{password}"
-                                type="text"
+                                type="password"
                         >
                     </div>
                     <div class="form-group">
