--- a/src/main/resources/templates/users.html
+++ b/src/main/resources/templates/users.html
@@ -36,7 +36,7 @@
         <tbody>
             <tr th:each="users : ${users}">
                 <td th:text="${users.firstName}">
-                <td th:text="${users.lasttName}">
+                <td th:text="${users.lastName}">
                 <td th:text="${users.email}">
                 </td>
 
